# voice-agents-hack

./: .env.example  .gitignore  Cargo.toml  IROH.md  README.md  pyproject.toml
common/: Cargo.toml
common/src/: lib.rs
docs/: PRD-multicam-video-rag-diagram.md  PRD-multicam-video-rag.md  lookout.html
docs/superpowers/plans/: 2026-04-18-audio-capture.md  2026-04-18-embedding-store-rag-query.md
follower/: Cargo.toml  build.rs
follower/examples/: cactus_smoke.rs
follower/src/: audio.rs  camera.rs  embedder.rs  frame_buffer.rs  gemini_client.rs  gemini_embedder.rs  lib.rs  main.rs  recorder.rs
follower/src/cactus/: ffi.rs  mod.rs
follower/tests/: e2e.rs
leader/: Cargo.toml  build.rs
leader/examples/: chat.rs
leader/src/: cactus_llm.rs  chroma.rs  gemini.rs  main.rs  query.rs  store.rs
leader/src/cactus/: ffi.rs  mod.rs
scripts/: chroma.sh  follower.sh  leader.sh
ui/: index.html  package-lock.json  package.json  tailwind.config.ts
ui/src/: App.tsx  api.ts  index.css  voice.ts
ui/src/components/: CameraScope.tsx  ClipPopup.tsx  LiveGrid.tsx  ReplayPlayer.tsx  ResultCard.tsx  VoiceBar.tsx
ui/src/tabs/: Command.tsx  ImageSearch.tsx
