[workspace]
resolver = "2"
members = ["common", "leader", "follower"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
data-encoding = "2"
futures-lite = "2"
iroh = "0.91"
postcard = { version = "1", features = ["alloc"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
