[workspace]
resolver = "2"
members = ["common", "leader", "follower"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
# cactus-sys lives in a sibling repo; uncomment + fix the path when you want
# the leader to load Gemma 4 for chunk captioning.
# cactus-sys = { path = "../cactus/rust/cactus-sys" }
clap = { version = "4", features = ["derive", "env"] }
data-encoding = "2"
dotenvy = "0.15"
futures-lite = "2"
iroh = "0.91"
postcard = { version = "1", features = ["alloc"] }
rand = "0.9"
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
