[package]
name = "follower"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "follower"
path = "src/lib.rs"

[[bin]]
name = "follower"
path = "src/main.rs"

[[example]]
name = "cactus_smoke"
path = "examples/cactus_smoke.rs"

[dependencies]
anyhow.workspace = true
blake3 = "1"
clap.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
iroh.workspace = true
nokhwa = { version = "0.10", features = ["input-native"] }
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
