[package]
name = "follower"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "follower"
path = "src/lib.rs"

[[bin]]
name = "follower"
path = "src/main.rs"

[[example]]
name = "cactus_smoke"
path = "examples/cactus_smoke.rs"
required-features = ["cactus"]

[features]
# Off by default: building without the cactus C dylib should "just work"
# and fall back to SyntheticEmbedder. Turn on when libcactus.dylib is
# installed (e.g. via Homebrew on Apple Silicon).
default = []
cactus = []

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
clap.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
iroh.workspace = true
nokhwa = { version = "0.10", features = ["input-native"] }
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
