[package]
name = "leader"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "leader"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cactus-sys.workspace = true
clap.workspace = true
common = { path = "../common" }
data-encoding.workspace = true
dotenvy.workspace = true
iroh.workspace = true
rand.workspace = true
rand_core_06.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
