[package]
name = "leader"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "leader"
path = "src/main.rs"

[[example]]
name = "chat"
required-features = ["cactus"]

[features]
default = []
cactus = []

[dependencies]
anyhow.workspace = true
axum = "0.7"
base64 = "0.22"
clap.workspace = true
common = { path = "../common" }
data-encoding.workspace = true
dotenvy.workspace = true
iroh.workspace = true
postcard.workspace = true
rand.workspace = true
rand_core_06.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
dotenvy = "0.15"
